plugins {
    id 'java-library'
    id 'se.patrikerdes.use-latest-versions'
    id 'com.github.ben-manes.versions'
    id 'org.liquibase.gradle' version '2.1.1'

}

apply plugin: 'java-library'

compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}
test {
    jvmArgs '--enable-preview'
}

compileJava.options.encoding = 'UTF-8'
sourceCompatibility = 17
targetCompatibility = 17
group 'ish'
version '1.0'
update.dependsOn processResources
//classes.dependsOn update


repositories {
    mavenCentral()
}


dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.1'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    api group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    api group: 'org.apache.commons', name: 'commons-text', version: '1.9'
    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
    api 'org.jetbrains:annotations:23.0.0'
    api 'com.neovisionaries:nv-i18n:1.29'


    api 'org.beryx:awt-color-factory:1.0.2'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
    api group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
    api 'org.mariadb.jdbc:mariadb-java-client:3.0.3'


    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'

    testImplementation "org.mockito:mockito-core:4.3.1"
    testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
    liquibaseRuntime 'org.mariadb.jdbc:mariadb-java-client:3.0.3'

    liquibaseRuntime 'org.liquibase:liquibase-core:4.7.1'
    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.2'
    liquibaseRuntime group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
    liquibaseRuntime group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
// https://mvnrepository.com/artifact/org.yaml/snakeyaml
    liquibaseRuntime group: 'org.yaml', name: 'snakeyaml', version: '1.30'
    liquibaseRuntime files('build/classes/java/main')
    liquibaseRuntime files('build/resources/db')
}
liquibase {

    activities {

        main {

            classpath "$projectDir"
            Properties properties = new Properties()
            properties.load(project.rootProject.file('model/src/main/resources/datasource.properties').newDataInputStream())
            changeLogFile "src/main/resources/db/changelog.yaml"
            url properties['jdbcUrl']
            username properties['username']
            password properties['password']

        }

    }
}
compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}
compileTestJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'

}

tasks.withType(JavaCompile).configureEach {
    options.fork = true
}
